--- a/pages/yuyue/index/index.wxss
+++ b/pages/yuyue/index/index.wxss
@@ -1,13 +1,137 @@
-.banner{width:100%;height:7.547rem;overflow: hidden;}
+.banner {
+  width: 100%;
+  height: 7.547rem;
+  overflow: hidden;
+}
 
-.yuyue_box image{width:12.667rem;height:3.68rem;background: none;margin:1rem auto 1rem;display: block;}
+.yuyue_box image {
+  width: 12.667rem;
+  height: 3.68rem;
+  background: none;
+  margin: 1rem auto 1rem;
+  display: block;
+}
 
-.content{display:block;margin-top:2rem;}
-.content title{display: block;font-size:16px;color:#333;}
-.content subtitle{display: block;font-size:12px;}
-.content .box{margin-top: 0.5rem;text-align: center;font-size:14px;color:#fff;}
-.content .box text{display:block;}
-.content .box .t1{margin-top:1rem;}
-.content .box1{line-height: 4.2rem;}
-.content .flex1{height:4.2rem;background: #eee;background-size:cover;}
-.content image{width:680rpx;height:376rpx;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* pages/find/find.wxss */
+
+page {
+   width: 100%;
+   height: 100%;
+}
+
+.window {
+   width: 100%;
+   height: 100%;
+}
+
+.searchbox {
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   background-color: #f6f6f6;
+}
+
+.searchbox_in {
+   height: 35px;
+   width: 720rpx;
+   margin: 8px 10px;
+   background-color: white;
+   border-radius: 8px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+}
+
+.search_img {
+   width: 12px;
+   height: 13px;
+}
+
+.search_txt {
+   margin-left: 6px;
+   font-size: 13px;
+   color: #999;
+}
+
+.classesbox {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+
+.classes_item {
+   padding: 3px auto 3px auto;
+   border: #e6e6e6 1px solid;
+   margin: 5px;
+   border-radius: 4px;
+   font-size: 14px;
+   width: 100%;
+}
+
+.rg_view {
+   padding: 6px;
+   background-color: #fff;
+}
+
+/* 注意点：使用columns时，每一行中的组件本身的高度不能高于组件所在行的行高，
+否则会发现组件的好似被切割成2块或多块了  */
+.rg {
+   width: 100%;
+   height: 100%;
+   columns: 1;
+   column-gap: 20rpx;
+   letter-spacing: 5px;
+   line-height: 28px;
+}
+
+/* 
+   注意点：columns分列后，最好使用margin-bottom控制行间距，
+   margin-top会导致第一项与后面的项不一致，很丑
+  */
+.class_r_g {
+   text-align: left;
+   width: 100%;
+   margin-bottom: 15px;
+   margin-left: 10px;
+   padding-left: 30px;
+}
+
+/* radio文本的点击效果  */
+.checkedt {
+   color: #40E0D0;
+   border: #40E0D0 1px solid;
+   border-radius: 4px;
+   font-size: 14px;
+   padding: 3px 18px;
+}
+
+/* 
+   radio文本的默认效果  
+   注意点：组件本身的高度不能高于组件所在行的行高，否则会发现组件的好似被切割成2块或多块了
+*/
+.normalt {
+   color: #666666;
+   border: #e6e6e6 1px solid;
+   border-radius: 4px;
+   font-size: 14px;
+   padding: 3px 18px;
+}
